wrapped widgets inside parent div and fixed search bar bug

--- a/client/src/components/QuestionAnswerFolder/QuestionAnswerCss/QuestionList.css
+++ b/client/src/components/QuestionAnswerFolder/QuestionAnswerCss/QuestionList.css
@@ -10,10 +10,11 @@
   border-radius: 2px;
   background-color: white;
   justify-content: flex-end;
+  position: absolute;
+  right: 0px;
 }
 
 .QuestionSearch {
-  z-index: -1;
   width: 100%;
   height: 60px;
   box-sizing: border-box;
@@ -28,6 +29,7 @@
 .SearchBar {
   width: 100%;
   display: inline-flex;
+  position: relative;
 }
 
 .QuestionList {
